# api/openapi.yaml
@@ -248,6 +248,15 @@ paths:
       responses:
         '200':
           description: OK
+          headers:
+            Cache-Control: 
+              schema:
+                type: string
+                example: no-store
+            Pragma:
+              schema:
+                type: string
+                example: no-cache
           content:
             application/json:
               schema:
